adding resume download + clean up

--- a/React_Portfolio-Project/index.html
+++ b/React_Portfolio-Project/index.html
@@ -10,14 +10,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:url" content="https://jacobleon.netlify.app/" />
     <meta property="og:title" content="Jacob Leon - Portfolio" />
     <meta property="og:description" content="Full Stack Developer Portfolio showcasing web development projects and technical skills" />
-    <meta property="og:image" content="https://yourdomain.com/thumbnail.png" />
+    <meta property="og:image" content="https://jacobleon.netlify.app/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://yourdomain.com/" />
+    <meta name="twitter:url" content="https://jacobleon.netlify.app/" />
     <meta name="twitter:title" content="Jacob Leon - Portfolio" />
     <meta name="twitter:description" content="Full Stack Developer Portfolio showcasing web development projects and technical skills" />
     <meta name="twitter:image" content="https://yourdomain.com/thumbnail.png" />
